feat: further preparation to open up AttackKit for state checks, load tests and more
